11 January 2009

* Vertical window splitting. Currently can only split a window into two panes.
  New split-window command splits (bound to ") and switch-pane command (bound to
  o) switches between panes. 

  close-pane, swap-pane commands are to follow. Also to come are pane resizing,
  >2 panes, the ability to break a pane out to a full window and vice versa and
  possibly horizontal splitting.

  Panes are subelements of windows rather than being windows in their own
  right. I tried to make them windows (so the splitting was at the session or
  client level) but this rapidly became very complex and invasive. So in the
  interests of having something working, I just made it so each window can have
  two child processes instead of one (and it still took me 12 hours straight
  coding). Now the concept is proven and much of the support code is there,
  this may change in future if more flexibility is needed.
* save-buffer command, from Tiago Cunha.

10 January 2009

* New option, lock-after-time. If there is no activity in the period specified
  by this option (in seconds), tmux will lock the server. Default is 1800 (30
  minutes), set to 0 to disable. 
* Server locking. Two new commands: set-password to set a password (a
  preencrypted password may be specified with -c); and lock-server to lock the
  server until the password is entered. Also an additional command line flag,
  -U, to unlock from the shell. The default password is blank (any password
  accepted). If specifying an encrypted password from encrypt(1) in .tmux.conf
  with -c, don't forget to enclose it in single-quotes (') to prevent shell
  variable expansion.
* If a window is created from the command line, tmux will now use the same
  current working directory for the new process. A new default-path option to
  sets the working directory for processes created from keys or interactively
  from the prompt.
* New mode to display a large clock. Entered with clock-mode command (bound to