@@ -1,5 +1,7 @@
 11 January 2009
 
+* GCC screws up copying (window-copy.c) so build with -O0 until I have time to
+  find the problem or a better workaround.
 * Vertical window splitting. Currently can only split a window into two panes.
   New split-window command splits (bound to ") and switch-pane command (bound to
   o) switches between panes. 
@@ -65,7 +67,7 @@
 
 07 January 2009
 
-* New flag to set and setw, -u, to unset a option (allowing it to inherit from)
+* New flag to set and setw, -u, to unset an option (allowing it to inherit from)
   the global options again.
 * Added more info messages for options changes.
 * A bit of tidying and reorganisation of options code.
@@ -874,7 +876,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.193 2009-01-11 23:31:46 nicm Exp $
+$Id: CHANGES,v 1.194 2009-01-12 00:52:37 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB
